refactoring [phase 1]: 1. move core models to service and persistence only 2. add more exceptions
