# src/main/java/com/homework/conference/adapter/api/ConferencesRestController.java
@@ -1,13 +1,14 @@
 package com.homework.conference.adapter.api;
 
 import com.homework.adapter.api.ConferencesApi;
-import com.homework.adapter.model.AddConferenceRequestDto;
-import com.homework.adapter.model.AddTalkRequestDto;
-import com.homework.adapter.model.ConferenceDto;
-import com.homework.adapter.model.TalkDto;
-import com.homework.adapter.model.UpdateConferenceRequestDto;
+import com.homework.adapter.api.dto.AddConferenceRequestApiDto;
+import com.homework.adapter.api.dto.AddTalkRequestApiDto;
+import com.homework.adapter.api.dto.ConferenceApiDto;
+import com.homework.adapter.api.dto.TalkApiDto;
+import com.homework.adapter.api.dto.UpdateConferenceRequestApiDto;
 import com.homework.conference.adapter.api.mapper.ConferenceMapper;
 import com.homework.conference.service.ConferenceService;
+import com.homework.conference.service.exception.ConferenceNotFoundException;
 import com.homework.conference.service.exception.DuplicateConferenceException;
 import com.homework.conference.service.exception.DuplicateTalkException;
 import lombok.RequiredArgsConstructor;
@@ -28,38 +29,40 @@ public class ConferencesRestController implements ConferencesApi {
     private final ConferenceMapper mapper;
 
     @Override
-    public ResponseEntity<Void> addConference(AddConferenceRequestDto conferenceDto) {
-        if (conferenceDto.getParticipantsNumber() > 100) {
-            return ResponseEntity.badRequest().build();
-        }
-        service.addConference(mapper.toConference(conferenceDto));
+    public ResponseEntity<ConferenceApiDto> addConference(AddConferenceRequestApiDto addConferenceRequest) {
+        service.addConference(mapper.toAddOrUpdateConferenceRequest(addConferenceRequest));
         return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<Void> addTalkToConference(Long conferenceId, AddTalkRequestDto talkRequestDto) {
-        service.addTalk(conferenceId, mapper.toTalk(talkRequestDto));
+    public ResponseEntity<TalkApiDto> addTalkToConference(Long conferenceId, AddTalkRequestApiDto addTalkRequest) {
+        service.addTalk(conferenceId, mapper.toAddTalkDto(addTalkRequest));
         return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<List<ConferenceDto>> findConferences() {
-        return ResponseEntity.ok().body(mapper.toConferences(service.getAllConferences()));
+    public ResponseEntity<List<ConferenceApiDto>> findConferences() {
+        return ResponseEntity.ok().body(mapper.toConferencesApiDto(service.getAllConferences()));
     }
 
     @Override
-    public ResponseEntity<List<TalkDto>> findTalksByConference(Long conferenceId) {
-        return ResponseEntity.ok().body(mapper.toTalks(service.getTalksByConference(conferenceId)));
+    public ResponseEntity<List<TalkApiDto>> findTalksByConference(Long conferenceId) {
+        return ResponseEntity.ok().body(mapper.toTalksApiDto(service.getTalksByConference(conferenceId)));
     }
 
     @Override
-    public ResponseEntity<Void> updateConference(Long conferenceId, UpdateConferenceRequestDto conferenceDto) {
-        service.updateConference(conferenceId, mapper.toConference(conferenceDto));
+    public ResponseEntity<Void> updateConference(Long conferenceId, UpdateConferenceRequestApiDto updateConference) {
+        service.updateConference(conferenceId, mapper.toAddOrUpdateConferenceRequest(updateConference));
         return ResponseEntity.ok().build();
     }
 
-    @ExceptionHandler({DuplicateConferenceException.class, DuplicateTalkException.class,})
-    public ResponseEntity<Void> handleNoSuchElementFoundException() {
+    @ExceptionHandler({DuplicateConferenceException.class, DuplicateTalkException.class})
+    public ResponseEntity<Void> handleDuplicateException() {
         return ResponseEntity.status(HttpStatus.CONFLICT).build();
+    }
+
+    @ExceptionHandler({ConferenceNotFoundException.class})
+    public ResponseEntity<Void> handleNotFoundException() {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
 }
