# src/main/java/com/homework/conference/service/dto/TalkTypeDto.java
@@ -1,0 +1,7 @@
+package com.homework.conference.service.dto;
+
+public enum TalkTypeDto {
+    TALK,
+    MASTERCLASS,
+    WORKSHOP
+}
